# waybar_weather

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  setup-api-key.sh
src/: app.rs  main.rs
src/api/: client.rs  mod.rs  models.rs
src/display/: formatting.rs  mod.rs  waybar.rs
src/domain/: error.rs  mod.rs  models.rs  types.rs
src/infra/: mod.rs
src/infra/api/: client.rs  mod.rs  models.rs
src/infra/display/: formatting.rs  mod.rs  waybar.rs
