[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing", "formatting", "std", "macros"] }
anyhow = "1.0"
urlencoding = "2.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
